# MVC-Server

./: .gitignore  CMakeLists.txt  main.cpp
controller/: coursesController.cpp  mainController.cpp  scoreController.cpp  studentsController.cpp  testController.cpp
data/: courses.csv  coursesDao.cpp  dataService.cpp  scores.csv  scoresDao.cpp  students.csv  studentsDao.cpp
framework/: csvDao.cpp  http.cpp  routerFramework.cpp  util.cpp  view.cpp
include/: controllerFramework.h  coursesController.h  coursesDao.h  csvDao.h  dataService.h  globalConfig.h  http.h  mainController.h  modelAndView.h  router.h  routerFramework.h  scoreController.h  scoresDao.h  studentsController.h  studentsDao.h  testController.h  util.h  view.h
public/css/: main.css
router/: router.cpp
view/: courses.html  error.html  index.html  scores_by_course.html  scores_by_stu.html  students.html  test.html
